# maven-install-android

./: BUILD.bazel  README.md  WORKSPACE  go.mod  maven_install.json
server/: BUILD.bazel  server.go
